; ModuleID = '/home/carl/AnghaBench/php-src/ext/fileinfo/libmagic/extr_magic.c_magic_errno.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/fileinfo/libmagic/extr_magic.c_magic_errno.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.magic_set = type { i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@EVENT_HAD_ERR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @magic_errno(%struct.magic_set* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.magic_set*, align 8
  store %struct.magic_set* %0, %struct.magic_set** %3, align 8
  %4 = load %struct.magic_set*, %struct.magic_set** %3, align 8
  %5 = icmp eq %struct.magic_set* %4, null
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @EINVAL, align 4
  store i32 %7, i32* %2, align 4
  br label %22

8:                                                ; preds = %1
  %9 = load %struct.magic_set*, %struct.magic_set** %3, align 8
  %10 = getelementptr inbounds %struct.magic_set, %struct.magic_set* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @EVENT_HAD_ERR, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %8
  %16 = load %struct.magic_set*, %struct.magic_set** %3, align 8
  %17 = getelementptr inbounds %struct.magic_set, %struct.magic_set* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  br label %20

19:                                               ; preds = %8
  br label %20

20:                                               ; preds = %19, %15
  %21 = phi i32 [ %18, %15 ], [ 0, %19 ]
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %20, %6
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
